# cppbackend

./: .gitignore
.github/workflows/: main.yml
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h
sprint1/problems/final_task/solution/src/: request_handler.cpp  request_handler.h
sprint1/problems/map_json/solution/: CMakeLists.txt  Dockerfile
sprint1/problems/map_json/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  request_handler.cpp  request_handler.h
sprint1/problems/radio/solution/: conanfile.txt
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_multi_threaded/solution/: conanfile.txt
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/: CMakeLists.txt
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/: conanfile.txt
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/tcp-udp/: conanfile.txt  tcp_client.cpp  tcp_server.cpp  udp_client.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/command_line/solution/src/: app.h  cl_parser.cpp  cl_parser.h  logger.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h  ticker.cpp  ticker.h
sprint2/problems/game_state/solution/: CMakeLists.txt
sprint2/problems/game_state/solution/src/: app.cpp  app.h  model.cpp  model.h  request_handler.h
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/: app.cpp  app.h  main.cpp  model.cpp  model.h  player.h  (+3 more)
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/time_control/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint3/problems/ammo/solution/: ammo.txt
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/flamegraph/solution/: CMakeLists.txt  shoot.py
sprint3/problems/gather-tests/solution/: CMakeLists.txt
sprint3/problems/gather/solution/: Dockerfile
sprint3/problems/gen_objects/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/gen_objects/solution/src/: app.h  json_loader.cpp  json_loader.h  model.cpp  model.h  request_handler.h
sprint3/problems/gen_objects/solution/tests/: loot_generator_tests.cpp
sprint3/problems/instrumentation/solution/: report
sprint3/problems/load/solution/: load.yaml
sprint3/problems/scores/solution/: Dockerfile
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/tv/solution/: conanfile.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/src/: book_manager.cpp  book_manager.h  json_loader.cpp  json_loader.h  main.cpp  request_handler.cpp  request_handler.h
sprint4/problems/db_of_books/solution/tests/: book_manager_test.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/state_serialization/solution/serializtion/: file
sprint4/problems/state_serialization/solution/src/: app.cpp  app.h  collision_detector.cpp  game_objects.h  json_loader.cpp  main.cpp  model.cpp  model.h  model_serialization.cpp  model_serialization.h  player.cpp  player.h  request_handler.h  retirement_detector.cpp
sprint4/problems/state_serialization/solution/src/leaderboard/: leaderboard.h
sprint4/problems/state_serialization/solution/src/leaderboard/postgres/: postgres.cpp
sprint4/problems/state_serialization/solution/tests/: loot_generator_tests.cpp  state-serialization-tests.cpp
(+106 files in other folders)
